# python-project-49

./: Makefile  README.md  demo_braen-calc.cast  demo_braen-even.cast  demo_braen-gcd.cast  demo_braen-prime.cast  demo_braen-progression.cast  pyproject.toml  ruff.toml
brain_games/: cli.py  engine.py  starts.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
